--- a/scss/pc/main.scss
+++ b/scss/pc/main.scss
@@ -1,6 +1,8 @@
 /** IMPORTS **/
 @import "/scss/variables.scss";
 @import "/scss/pc/homepage/homepage.scss";
+@import "/scss/pc/property/property.scss";
+@import "/scss/pc/property/detail.scss";
 
 
 #pc-wrap {
@@ -8,7 +10,7 @@
 		.navbar {
 			.navbar-main {
 				position: fixed;
-				padding: 22px 0px;
+				padding: 22px 0;
 				width: 100%;
 				height: 87px;
 				display: flex;
@@ -18,7 +20,8 @@
 				align-items: center;
 				border-top: 1px solid rgba(255, 255, 255, 0.07);
 				&.transparent {
-					background-color: #181a209e;
+					background-color: rgba(24, 26, 32, 0.62); /* To'g'ri RGBA qiymat */
+
 					}
 			.container {
 				flex-direction: row;
